--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -248,3 +248,97 @@ footer p{
 .skip-link:focus{
     top: 60px;
 }
+
+/* Spinner
+*/
+.spinner {
+    margin: 100px auto;
+    width: 50px;
+    height: 40px;
+    text-align: center;
+    font-size: 10px;
+  }
+  
+  .spinner > div {
+    background-color: #333;
+    height: 100%;
+    width: 6px;
+    display: inline-block;
+    
+    -webkit-animation: sk-stretchdelay 1.2s infinite ease-in-out;
+    animation: sk-stretchdelay 1.2s infinite ease-in-out;
+  }
+  
+  .spinner .rect2 {
+    -webkit-animation-delay: -1.1s;
+    animation-delay: -1.1s;
+  }
+  
+  .spinner .rect3 {
+    -webkit-animation-delay: -1.0s;
+    animation-delay: -1.0s;
+  }
+  
+  .spinner .rect4 {
+    -webkit-animation-delay: -0.9s;
+    animation-delay: -0.9s;
+  }
+  
+  .spinner .rect5 {
+    -webkit-animation-delay: -0.8s;
+    animation-delay: -0.8s;
+  }
+  
+  @-webkit-keyframes sk-stretchdelay {
+    0%, 40%, 100% { -webkit-transform: scaleY(0.4) }  
+    20% { -webkit-transform: scaleY(1.0) }
+  }
+  
+  @keyframes sk-stretchdelay {
+    0%, 40%, 100% { 
+      transform: scaleY(0.4);
+      -webkit-transform: scaleY(0.4);
+    }  20% { 
+      transform: scaleY(1.0);
+      -webkit-transform: scaleY(1.0);
+    }
+  }
+
+/*
+* Resto Detail
+*/
+.restaurant-name{
+    width: 100%;
+    margin: 30px auto;
+    text-align: center;
+}
+.restaurant-image{
+    width: 100%;
+}
+.restaurant-info{
+    padding: 25px;
+    text-align: justify;
+}
+.rating-info{
+    margin-bottom: 8px;
+}
+.description, .address, .category, .menu, .food, .drink{
+    margin: 10px 0;
+}
+.customer-reviews{
+    margin: 15px 0;
+}
+.customer-name{
+    font-size: 15px;
+}
+.reviews{
+    padding: 5px 10px;
+    margin: 10px 0;
+    background-color: #e8e8eb;
+    border-radius: 5px;
+}
+.date{
+    color: rgb(67, 67, 67);
+    font-size: 12px;
+    margin: 3px 0;
+}
