--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -8,6 +8,13 @@
     <title>Resto Point</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+            crossorigin="anonymous">
+    <meta name="theme-color" content="#18191a"/>
+    <meta name="description" content="Restaurant Apps Lite">
+    <link rel="apple-touch-icon" href="/icons/icon-192x192.png">
+    <link rel="manifest" href="manifest.json">
+    <link rel="icon" href="favicon.png">
 </head>
 
 <body>
@@ -22,10 +29,10 @@
         <nav class="nav" id="drawer">
             <ul class="nav-list">
                 <li class="nav-item">
-                    <a href="index.html" class="nav-link active">Home</a>
+                    <a href="index.html" class="nav-link">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link">Favorite</a>
+                    <a href="#/favorite" class="nav-link">Favorite</a>
                 </li>
                 <li class="nav-item">
                     <a href="https://github.com/Fachrulmustofa20" target="_blank" class="nav-link">About Us</a>
@@ -34,17 +41,11 @@
         </nav>
 
     </header>
-    <div class="hero">
-        <div class="hero-inner">
-            <h1 class="hero-title">Cari Restoran Ya <span class="highlight">Resto Point</span></h1>
-            <p class="hero-tagline">Mudahnya cari restoran terbaik di Resto Point</p>
-        </div>
-    </div>
     <main id="maincontent">
         
     </main>
     <footer>
-        <p>Copyright © 2021 - Resto Point Apps</p>
+        <footer-element></footer-element>
     </footer>
 </body>
 
