--- a/src/styles/responsive.css
+++ b/src/styles/responsive.css
@@ -16,7 +16,7 @@
         top: 68px;
         left: 40%;
         width: 60%;
-        min-height: 400px;
+        min-height: 100%;
         transition: all 500ms ease-in-out;
         clip-path: circle(0px at top right);
     }
@@ -52,6 +52,12 @@
         grid-column-gap: 25px;
         grid-row-gap: 25px;
     }
+    .restaurant-image{
+        width: 100%;
+        height: 500px;
+        object-fit: cover;
+        object-position: center;
+    }
 }
 
 @media screen and (min-width: 1000px) {
@@ -61,9 +67,22 @@
         grid-column-gap: 25px;
         grid-row-gap: 25px;
     }
+    .restaurant-image{
+        width: 100%;
+        height: 550px;
+        object-fit: cover;
+        object-position: center;
+    }
 }
 @media screen and (min-width: 1200px) {
-    main{
+    .content, .restaurant-info{
         max-width: 1200px;
+        margin: auto;
+    }
+    .restaurant-image{
+        width: 100%;
+        height: 580px;
+        object-fit: cover;
+        object-position: center;
     }
 }
