--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -157,6 +157,9 @@ main{
 .latest-label{
     color: #18191a;
 }
+.favorite-label{
+    padding-top: 30px;
+}
 .list{
     margin: 32px auto auto;
 }
@@ -354,12 +357,13 @@ footer p{
     position: fixed;
     bottom: 16px;
     right: 16px;
-    background-color: #f5d34b;
+    background-color: #e74c3c;
     color: white;
     border: 0;
     border-radius: 50%;
     width: 55px;
     height: 55px;
+    z-index: 100;
     cursor: pointer;
     display: flex;
     align-items: center;
