--- a/src/styles/responsive.css
+++ b/src/styles/responsive.css
@@ -75,7 +75,7 @@
     }
 }
 @media screen and (min-width: 1200px) {
-    .content, .restaurant-info, .form-review{
+    .content, .restaurant-info{
         max-width: 1200px;
         margin: auto;
         margin-bottom: 30px;
