add aria label in button menu

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -23,7 +23,7 @@
         <a href="index.html" class="navbar-brand">
             <img src="./images/logo.png" alt="logo" height="28px">
         </a>
-        <button id="menu" class="menu-toggle">
+        <button id="menu" class="menu-toggle" aria-label="menu toggle">
             <span class="hamburger"></span>
         </button>
         <nav class="nav" id="drawer">
