add rel noopener in anchor blank

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -21,7 +21,7 @@
     <a href="#maincontent" class="skip-link">Menuju ke konten</a>
     <header class="header sticky">
         <a href="index.html" class="navbar-brand">
-            <img src="./images/logo.png" alt="logo" height="28px">
+            <img src="./images/logo.png" alt="logo" height="28px" width="225px">
         </a>
         <button id="menu" class="menu-toggle" aria-label="menu toggle">
             <span class="hamburger"></span>
@@ -35,7 +35,7 @@
                     <a href="#/favorite" class="nav-link">Favorite</a>
                 </li>
                 <li class="nav-item">
-                    <a href="https://github.com/Fachrulmustofa20" target="_blank" class="nav-link">About Us</a>
+                    <a href="https://github.com/Fachrulmustofa20" target="_blank" class="nav-link" rel="noopener">About Us</a>
                 </li>
             </ul>
         </nav>
